# iorgen

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  check_code.sh  flake.nix  parser.py  pyproject.toml  setup.py
.github/workflows/: iorgen-ci-compile-generated-code.yaml  iorgen-ci-lint.yaml  iorgen-ci-no-compilation-tests.yaml
iorgen/: __init__.py  __main__.py  check_input.py  checkinput.py  generator.py  markdown.py  parser_c.py  parser_cpp.py  parser_csharp.py  parser_d.py  parser_go.py  parser_haskell.py  parser_java.py  parser_javascript.py  parser_julia.py  parser_kotlin.py  parser_lua.py  parser_mtlg.py  parser_ocaml.py  parser_pascal.py  parser_perl.py  parser_php.py  parser_prolog.py  parser_python.py  parser_ruby.py  parser_rust.py  parser_scheme.py  parser_zig.py  random_input.py  types.py  utils.py  validator.py
test/: regenerate.py  test.py
test/samples/emptylines/: emptylines.c  emptylines.cpp  emptylines.cs  emptylines.d  emptylines.en.md  emptylines.fr.md  emptylines.go  emptylines.hs  emptylines.java  emptylines.jl  emptylines.js  emptylines.kts  emptylines.lua  emptylines.metalang  emptylines.ml  emptylines.pas  emptylines.php  emptylines.pl  emptylines.pro  emptylines.py  emptylines.rb  emptylines.rs  emptylines.sample_input  emptylines.scm  emptylines.yaml  emptylines.zig
test/samples/example/: example.c  example.cpp  example.cs  example.d  example.en.md  example.fr.md  example.go  example.hs  example.java  example.jl  (+16 more)
test/unittests/: test_mtlg_parser.py
(+182 files in other folders)
